@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
 EXPOSE 8080
 ADD target/employee-rest-aws-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT [ "sh", "-c", "java -jar /app.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app.jar"]
